--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,10 @@
    import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
    const el = document.createElement('pwa-update');
    document.body.appendChild(el);
-</script>
-
+  </script>
+  <!-- 100% privacy friendly analytics -->
+  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+  <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   <script type="text/javascript" src="assets/main.js"></script>
   <script type="text/javascript" src="assets/index.js"></script>
   <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="assets/arr.png"></button>
